@@ -14,6 +14,10 @@ CHANGES
       a collection to an iterable.  Use contains() to test
       for collection membership.
 
+    - Improved weakref identity map memory management to no longer 
+      require mutexing, resurrects garbage collected instance
+      on a lazy basis for an InstanceState with pending changes.
+      
 - sql
     - Further simplified SELECT compilation and its relationship
       to result row processing.
